# rust-table-formatter

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  commitlint.config.js
.github/workflows/: mean_bean_ci.yml
src/: builder.rs  error.rs  format_error.rs  lib.rs  table.rs
src/table/: cell.rs  content.rs  mod.rs  overflow.rs  padding.rs  settings.rs  table.rs  table_cell.rs  table_column.rs
tests/: test_colorize.rs  test_doc.rs  test_format.rs  test_table.rs
