[package]
name = "table_formatter"
version = "0.1.0"
edition = "2021"
authors = ["Embers-of-the-fire <wangbh533@126.com>"]
description = "A simple text table formatter written"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
itertools = "0.10.5"
